--- a/po/es/kfax.po
+++ b/po/es/kfax.po
@@ -1,18 +1,10 @@
-# SOME DESCRIPTIVE TITLE.
-# Copyright (C) YEAR Free Software Foundation, Inc.
-# FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
-#
-#, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: Kfax 1 \n"
+"Project-Id-Version: kdegraphics \n"
 "POT-Creation-Date: 1998-04-09 18:29+0200\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
+"PO-Revision-Date: 1998-06-17 +0200\n"
 "Last-Translator: Antonio Juan Alcaraz <alcaraz@bestia.xpress.es>\n"
-"Language-Team: Spanish <es@li.org>\n"
-"MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=charset=iso-8859-1\n"
-"Content-Transfer-Encoding: 8-bit\n"
+"Last-Translator: Boris Wesslowski <bwess@gmx.net>\n"
 
 #: about.cpp:39
 msgid "About KFax"
@@ -20,27 +12,27 @@ msgstr "Acerca de KFax"
 
 #: about.cpp:58
 msgid "Version "
-msgstr "Version "
+msgstr "Versión "
 
 #: kfax.cpp:222 kfax.cpp:820
 msgid "Show &Tool Bar"
-msgstr "Mostrar Barra de &Herramientas"
+msgstr "Mostrar barra de &herramientas"
 
 #: kfax.cpp:224 kfax.cpp:813
 msgid "Hide &Tool Bar"
-msgstr "Ocultar Barra de &Herramientas"
+msgstr "Ocultar barra de &herramientas"
 
 #: kfax.cpp:227 kfax.cpp:793
 msgid "Show &Status Bar"
-msgstr "Mostrar Barra de &Estado"
+msgstr "Mostrar barra de &estado"
 
 #: kfax.cpp:229 kfax.cpp:786
 msgid "Hide &Status Bar"
-msgstr "Ocultar Barra de &Estado"
+msgstr "Ocultar barra de &estado"
 
 #: kfax.cpp:380
 msgid "&About..."
-msgstr "&Acerca de ..."
+msgstr "&Acerca de..."
 
 #: kfax.cpp:381
 msgid "Help page"
@@ -48,15 +40,15 @@ msgstr "Pagina de ayuda"
 
 #: kfax.cpp:382
 msgid "KFax &Help "
-msgstr "KFax &Ayuda"
+msgstr "&Ayuda KFax"
 
 #: kfax.cpp:384
 msgid "&Open Fax..."
-msgstr "&Abrir Fax..."
+msgstr "&Abrir fax..."
 
 #: kfax.cpp:385
 msgid "&Add Fax..."
-msgstr "A&ñadir Fax..."
+msgstr "A&ñadir fax..."
 
 #: kfax.cpp:388
 msgid "Open &URL..."
@@ -68,35 +60,35 @@ msgstr "Guardar como U&RL"
 
 #: kfax.cpp:390
 msgid "&Close Fax"
-msgstr "&Cerrar Fax"
+msgstr "&Cerrar fax"
 
 #: kfax.cpp:397
 msgid "&Next Page"
-msgstr "Página &Siguiente"
+msgstr "Página &siguiente"
 
 #: kfax.cpp:398
 msgid "&Prev Page"
-msgstr "Página &Anterior"
+msgstr "Página &anterior"
 
 #: kfax.cpp:399
 msgid "&First Page"
-msgstr "&Primera Página"
+msgstr "&Primera página"
 
 #: kfax.cpp:400
 msgid "&Last Page"
-msgstr "&Ultima Página"
+msgstr "&Ultima página"
 
 #: kfax.cpp:402
 msgid "&Rotate Page"
-msgstr "&Rotar Página"
+msgstr "&Rotar página"
 
 #: kfax.cpp:403
 msgid "&Mirror Page"
-msgstr "&Reflejar Página"
+msgstr "&Reflejar página"
 
 #: kfax.cpp:404
 msgid "&Flip Page"
-msgstr "&Boca abajo"
+msgstr "&De cabeza"
 
 #: kfax.cpp:406
 msgid "Zoom &in"
@@ -112,27 +104,27 @@ msgstr "&Preferencias"
 
 #: kfax.cpp:414
 msgid "&Tool Bar"
-msgstr "Barra de &Herramientas"
+msgstr "Barra de &herramientas"
 
 #: kfax.cpp:415
 msgid "&Status Bar"
-msgstr "Barra de &Estado"
+msgstr "Barra de &estado"
 
 #: kfax.cpp:442
 msgid "Go back"
-msgstr "Delante"
+msgstr "Atrás"
 
 #: kfax.cpp:445
 msgid "Go forward"
-msgstr "Atras"
+msgstr "Adelante"
 
 #: kfax.cpp:450
 msgid "Go to start"
-msgstr "Ir al Principio"
+msgstr "Ir al principio"
 
 #: kfax.cpp:453
 msgid "Go to end"
-msgstr "Ir al Final"
+msgstr "Ir al final"
 
 #: kfax.cpp:459
 msgid "Zoom in"
@@ -152,7 +144,7 @@ msgstr "Ir a la página ..."
 
 #: kfax.cpp:562
 msgid "Open Location:"
-msgstr "Abrir Enlace..."
+msgstr "Abrir dirección:"
 
 #: kfax.cpp:578
 msgid "You need to open a Fax first"
@@ -160,7 +152,7 @@ msgstr "Debe abrir un Fax antes"
 
 #: kfax.cpp:584
 msgid "Save to Location:"
-msgstr "Guardar en "
+msgstr "Guardar en:"
 
 #: kfax.cpp:625
 msgid "Select Facsimile to Open"
@@ -176,7 +168,7 @@ msgstr "Aún no está implementado"
 
 #: kfax.cpp:854
 msgid "     There is no document active      "
-msgstr " No hay un documento activo"
+msgstr " No hay un documento activo "
 
 #: kfax.cpp:988
 #, c-format
@@ -267,7 +259,7 @@ msgstr ""
  
 #: options.cpp:54
 msgid "KFax Options Dialog"
-msgstr "KFax Dialogo de Opciones"
+msgstr "Diálogo de opciones KFax"
 
 #: options.cpp:64
 msgid "Raw Fax Resolution:"
@@ -275,7 +267,7 @@ msgstr "Resolución Fax"
 
 #: options.cpp:68 options.cpp:149
 msgid "Auto"
-msgstr "Automatico"
+msgstr "Automático"
 
 #: options.cpp:71
 msgid "Fine"
@@ -291,7 +283,7 @@ msgstr "Horizontal"
 
 #: options.cpp:89
 msgid "Upside Down"
-msgstr "Boca abajo"
+msgstr "De cabeza"
 
 #: options.cpp:93
 msgid "Invert"
@@ -299,7 +291,7 @@ msgstr "Invertir"
 
 #: options.cpp:102
 msgid "Raw Fax Data are:"
-msgstr "Fecha del Fax es"
+msgstr "Fecha del fax es:"
 
 #: options.cpp:106
 msgid "LS-Bit first"
@@ -307,19 +299,19 @@ msgstr "LS-Bit first"
 
 #: options.cpp:114
 msgid "Raw Facsimili are:"
-msgstr "Raw Facsimil es:"
+msgstr "Facsímiles 'raw' son:"
 
 #: options.cpp:135
 msgid "Raw Fax width:"
-msgstr "Ancho de Fax es"
+msgstr "Ancho de fax es"
 
 #: options.cpp:142
 msgid "height:"
-msgstr "Alto"
+msgstr "Alto:"
 
 #: print.cpp:51
 msgid "KFax Print Dialog"
-msgstr "KFax Diálogo de impresión"
+msgstr "Diálogo de impresión KFax"
 
 #: print.cpp:57
 msgid "Print as Postscript to Printer"
@@ -347,7 +339,7 @@ msgstr "Ajustar fax a tamaño de página"
 
 #: print.cpp:111
 msgid "Add Printer Margins (measured in cm):"
-msgstr "Añadir margenes de impresion (medidos en cm):"
+msgstr "Añadir márgenes de impresion (medidos en cm):"
 
 #: print.cpp:119
 msgid "Horizontal:"
