--- a/po/cs/kghostview.po
+++ b/po/cs/kghostview.po
@@ -6,7 +6,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: kghostview\n"
 "POT-Creation-Date: 1998-06-16 14:19+0200\n"
-"PO-Revision-Date: 1998-06-01 09:12 MET DST\n"
+"PO-Revision-Date: 1998-06-18 09:50 MET DST\n"
 "Last-Translator: Miroslav Flídr <flidr@kky.zcu.cz>\n"
 "Language-Team: Czech <cs@li.org>\n"
 "MIME-Version: 1.0\n"
@@ -133,83 +133,83 @@ msgstr "gs"
 
 #: kaccel.cpp:169
 msgid "CTRL+O"
-msgstr ""
+msgstr "CTRL+O"
 
 #: kaccel.cpp:173
 msgid "CTRL+N"
-msgstr ""
+msgstr "CTRL+N"
 
 #: kaccel.cpp:177
 msgid "CTRL+W"
-msgstr ""
+msgstr "CTRL+W"
 
 #: kaccel.cpp:181
 msgid "CTRL+S"
-msgstr ""
+msgstr "CTRL+S"
 
 #: kaccel.cpp:185
 msgid "CTRL+P"
-msgstr ""
+msgstr "CTRL+P"
 
 #: kaccel.cpp:189
 msgid "CTRL+Q"
-msgstr ""
+msgstr "CTRL+Q"
 
 #: kaccel.cpp:193
 msgid "CTRL+X"
-msgstr ""
+msgstr "CTRL+X"
 
 #: kaccel.cpp:197
 msgid "CTRL+C"
-msgstr ""
+msgstr "CTRL+C"
 
 #: kaccel.cpp:201
 msgid "CTRL+V"
-msgstr ""
+msgstr "CTRL+V"
 
 #: kaccel.cpp:205
 msgid "CTRL+Z"
-msgstr ""
+msgstr "CTRL+Z"
 
 #: kaccel.cpp:209
 msgid "CTRL+F"
-msgstr ""
+msgstr "CTRL+F"
 
 #: kaccel.cpp:213
 msgid "CTRL+R"
-msgstr ""
+msgstr "CTRL+R"
 
 #: kaccel.cpp:216 kaccel.cpp:443
 msgid "Insert"
-msgstr ""
+msgstr "Insert"
 
 #: kaccel.cpp:217
 msgid "CTRL+Insert"
-msgstr ""
+msgstr "CTRL+Insert"
 
 #: kaccel.cpp:221
 msgid "CTRL+Home"
-msgstr ""
+msgstr "CTRL+Home"
 
 #: kaccel.cpp:224 kaccel.cpp:449
 msgid "End"
-msgstr ""
+msgstr "End"
 
 #: kaccel.cpp:225
 msgid "CTRL+End"
-msgstr ""
+msgstr "CTRL+End"
 
 #: kaccel.cpp:228 kaccel.cpp:229 kaccel.cpp:452
 msgid "Prior"
-msgstr ""
+msgstr "Prior"
 
 #: kaccel.cpp:232 kaccel.cpp:233 kaccel.cpp:455
 msgid "Next"
-msgstr ""
+msgstr "Next"
 
 #: kaccel.cpp:237
 msgid "F1"
-msgstr ""
+msgstr "F1"
 
 #: kghostview.cpp:199
 msgid "Document information"
@@ -764,9 +764,3 @@ msgstr "&Aplikovat"
 #: zoom.cpp:46
 msgid "&Magnification"
 msgstr "&Zvìt¹ení"
-
-#~ msgid "Print"
-#~ msgstr "Tisk"
-
-#~ msgid "&Reload"
-#~ msgstr "O&bnovit"
