--- a/po/fr/kghostview.po
+++ b/po/fr/kghostview.po
@@ -5,7 +5,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: kghostview\n"
-"POT-Creation-Date: 1998-06-18 22:44+0200\n"
+"POT-Creation-Date: 1998-05-30 17:41+0200\n"
 "PO-Revision-Date: 1998-01-28 23:33 CET\n"
 "Last-Translator: Serge \"sergio\" Tellène <tells@mygale.org>\n"
 "Language-Team: Français\n"
@@ -69,11 +69,11 @@ msgstr "Nom de fichier :"
 
 #: info.cpp:53
 msgid "Document title :"
-msgstr ""
+msgstr "Titre du document :"
 
 #: info.cpp:61
 msgid "Publication date :"
-msgstr ""
+msgstr "Date de publication :"
 
 #: interpreter.cpp:42
 msgid "General"
@@ -146,6 +146,10 @@ msgstr "CTRL+W"
 #: kaccel.cpp:181
 msgid "CTRL+S"
 msgstr "CTRL+S"
+
+#: kaccel.cpp:184 kaccel.cpp:419 kghostview.cpp:436 kghostview.cpp:1284
+msgid "Print"
+msgstr "Imprimer"
 
 #: kaccel.cpp:185
 msgid "CTRL+P"
@@ -272,22 +276,23 @@ msgid "Configure interpreter"
 msgstr "Configurer l'interpréteur"
 
 #: kghostview.cpp:494
-#, fuzzy
-msgid "&Open ..."
+msgid "&Open..."
 msgstr "&Ouvrir..."
 
 #: kghostview.cpp:495
 msgid "Open &recent"
 msgstr "Ouvrir &récent"
 
+#: kghostview.cpp:500
+msgid "&Reload"
+msgstr "Re&charcher"
+
 #: kghostview.cpp:503
-#, fuzzy
-msgid "Page Set&up ..."
+msgid "Page Set&up..."
 msgstr "Mise en &page..."
 
 #: kghostview.cpp:505
-#, fuzzy
-msgid "&Print ..."
+msgid "&Print..."
 msgstr "&Imprimer..."
 
 #: kghostview.cpp:513
@@ -299,13 +304,11 @@ msgid "Zoom &out"
 msgstr "&Réduire"
 
 #: kghostview.cpp:517
-#, fuzzy
-msgid "&Zoom ..."
+msgid "&Zoom..."
 msgstr "&Loupe..."
 
 #: kghostview.cpp:522
-#, fuzzy
-msgid "&Info ..."
+msgid "&Info..."
 msgstr "&Informations..."
 
 #: kghostview.cpp:527
@@ -317,8 +320,7 @@ msgid "&Next page"
 msgstr "Page &suivante"
 
 #: kghostview.cpp:531
-#, fuzzy
-msgid "&Go to page ..."
+msgid "&Go to page..."
 msgstr "&Aller à la page..."
 
 #: kghostview.cpp:534
@@ -370,13 +372,11 @@ msgid "Show &page list"
 msgstr "Montrer la liste des &pages"
 
 #: kghostview.cpp:571
-#, fuzzy
-msgid "Configure &interpreter ..."
+msgid "Configure &interpreter..."
 msgstr "Configurer l'&interpréteur..."
 
 #: kghostview.cpp:572
-#, fuzzy
-msgid "Configure &key bindings ..."
+msgid "Configure &key bindings..."
 msgstr "Configurer les raccourcis &clavier..."
 
 #: kghostview.cpp:574
@@ -404,18 +404,15 @@ msgid "&Pagemarks"
 msgstr "&Signets"
 
 #: kghostview.cpp:661
-#, fuzzy
-msgid "New window ..."
+msgid "New window..."
 msgstr "Nouvelle fenêtre..."
 
 #: kghostview.cpp:664
-#, fuzzy
-msgid "Open file ..."
+msgid "Open file..."
 msgstr "Ouvrir un fichier..."
 
 #: kghostview.cpp:672
-#, fuzzy
-msgid "Print document ..."
+msgid "Print document..."
 msgstr "Imprimer le document..."
 
 #: kghostview.cpp:677
@@ -435,8 +432,7 @@ msgid "Go forward"
 msgstr "Avancer"
 
 #: kghostview.cpp:691
-#, fuzzy
-msgid "Go to page ..."
+msgid "Go to page..."
 msgstr "Aller à la page..."
 
 #: kghostview.cpp:696
@@ -504,8 +500,7 @@ msgid "Upside down"
 msgstr "Tête en bas"
 
 #: kghostview.cpp:1262
-#, fuzzy
-msgid "Go to ..."
+msgid "Go to..."
 msgstr "Aller à la page..."
 
 #: kghostview.cpp:1337
@@ -734,8 +729,7 @@ msgid "Print document in re&verse order"
 msgstr "Imprimer les pages à rebours"
 
 #: print.cpp:249
-#, fuzzy
-msgid "&Setup ..."
+msgid "&Setup..."
 msgstr "&Paramétrage..."
 
 #: print.cpp:289
@@ -774,9 +768,6 @@ msgstr "&Appliquer"
 #: zoom.cpp:46
 msgid "&Magnification"
 msgstr "&Echelle"
-
-#~ msgid "Print"
-#~ msgstr "Imprimer"
 
 #~ msgid "Home"
 #~ msgstr "Home"
